add personal data

--- a/index.html
+++ b/index.html
@@ -78,14 +78,15 @@
     <div class="container">
         <div class="left-column">
             <div class="photo"></div>
-            <h1>Az Ön Neve</h1>
-            <p>Senior Backend Fejlesztő</p>
-            
+            <h1>Molnár Norbert</h1>
+            <p>Backend Fejlesztő</p>
+            <p>Adatmérnök</p>
+
             <div class="contact-info">
                 <h2>Kapcsolat</h2>
-                <p>Email: az.on@email.com</p>
+                <p>Email: m7kn1872@gmail.com</p>
                 <p>Telefon: +36 30 123 4567</p>
-                <p>LinkedIn: linkedin.com/in/azonneve</p>
+                <p>Github page / CV: <a href="https://m7kn.github.io">https://m7kn.github.io</a></p>
             </div>
             
             <div class="skills">
