--- a/index.html
+++ b/index.html
@@ -3,76 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kétoszlopos Önéletrajz - Backend Fejlesztő</title>
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            line-height: 1.6;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        .container {
-            display: flex;
-            max-width: 1000px;
-            margin: 20px auto;
-            background-color: white;
-            box-shadow: 0 0 20px rgba(0,0,0,0.1);
-        }
-        .left-column {
-            width: 35%;
-            background-color: #2c3e50;
-            color: white;
-            padding: 40px;
-        }
-        .right-column {
-            width: 65%;
-            padding: 40px;
-        }
-        .photo {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            background-color: #34495e;
-            margin: 0 auto 20px;
-        }
-        h1, h2 {
-            margin-top: 0;
-        }
-        h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-        }
-        h2 {
-            color: #3498db;
-            border-bottom: 2px solid #3498db;
-            padding-bottom: 10px;
-            margin-top: 30px;
-        }
-        .left-column h2 {
-            color: #ecf0f1;
-            border-bottom-color: #ecf0f1;
-        }
-        .contact-info, .skills {
-            margin-bottom: 30px;
-        }
-        .skill {
-            background-color: #34495e;
-            color: white;
-            padding: 5px 10px;
-            margin: 5px 0;
-            display: inline-block;
-            border-radius: 3px;
-        }
-        .experience-item, .education-item {
-            margin-bottom: 20px;
-        }
-        .date {
-            font-style: italic;
-            color: #7f8c8d;
-        }
-    </style>
+    <title>Molnár Norbert CV</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
@@ -84,9 +16,9 @@
 
             <div class="contact-info">
                 <h2>Kapcsolat</h2>
-                <p>Email: m7kn1872@gmail.com</p>
-                <p>Telefon: +36 30 123 4567</p>
-                <p>Github page / CV: <a href="https://m7kn.github.io">https://m7kn.github.io</a></p>
+                <p>Email: <a href="mailto:m7kn1872@gmail.com>m7kn1872@gmail.com</a></p>
+                <p>Telefon: <a href=tel:+36 30 123 4567>+36 30 123 4567</a></p>
+                <p>Github page / CV: <a href="https://m7kn.github.io" target="_blank">https://m7kn.github.io</a></p>
             </div>
             
             <div class="skills">
