--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
             <div class="contact-info">
                 <h2>Kapcsolat</h2>
-                <p>Email: <a href="mailto:m7kn1872@gmail.com>m7kn1872@gmail.com</a></p>
-                <p>Telefon: <a href=tel:+36 30 123 4567>+36 30 123 4567</a></p>
+                <p>Email: <a href="mailto:m7kn1872@gmail.com">m7kn1872@gmail.com</a></p>
+                <p>Telefon: <a href="tel:+36 30 123 4567">+36 30 123 4567</a></p>
                 <p>Github page / CV: <a href="https://m7kn.github.io" target="_blank">https://m7kn.github.io</a></p>
             </div>
             
