change professional profile & skills

--- a/index.html
+++ b/index.html
@@ -31,13 +31,29 @@
                 <span class="skill">Data Engineering</span>
                 <span class="skill">Docker</span>
                 <span class="skill">Microservices</span>
+                <span class="skill">Cloud Computing</span>
+                <span class="skill">Full Stack Development</span>
+                <span class="skill">System Administration</span>
+                <span class="skill">AI Technologies</span>
             </div>
         </div>
         
         <div class="right-column">
             <div class="section">
                 <h2>Szakmai Profil</h2>
-                <p>Tapasztalt backend fejlesztő vagyok, specializálódva Python és NodeJS technológiákra. Nemrég szereztem Data Engineer képesítést, ami kiegészíti meglévő backend fejlesztői készségeimet. Széleskörű tapasztalattal rendelkezem fullstack projektekben is, de fő szakterületem a robusztus és skálázható backend rendszerek tervezése és implementálása.</p>
+                <p>Sokoldalú IT szakember vagyok, elsődlegesen backend fejlesztői fókusszal, 
+                    de széleskörű tapasztalattal rendelkezem fullstack fejlesztésben és
+                     rendszergazdai feladatokban is. Szakterületem a Python és NodeJS technológiák, 
+                     amelyeket sikeresen alkalmazok robusztus és skálázható backend rendszerek tervezésében és implementálásában. 
+                     Nemrég megszerzett Data Engineer képesítésem kiegészíti meglévő készségeimet, 
+                     lehetővé téve komplex adatkezelési feladatok megoldását. 
+                     Emellett tapasztalatom van cloud-alapú megoldások terén, 
+                     ami lehetővé teszi számomra, hogy modern, felhő alapú alkalmazásokat fejlesszek 
+                     és üzemeltessek. Rendszergazdai hátterem biztosítja, hogy a fejlesztett 
+                     rendszerek ne csak hatékonyak, de könnyen karbantarthatók és biztonságosak is legyenek.
+                     Ismerem és mindennapi munkáimban hatékonyan alkalmazom a legújabb AI technológiákat, 
+                     integrálva azokat a fejlesztési folyamatokba a hatékonyság és innováció növelése érdekében.
+                    </p>
             </div>
 
             <div class="section">
