add multi-language feature

--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Molnár Norbert CV</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
         <div class="left-column">
             <div class="photo"></div>
-            <h1>Molnár Norbert</h1>
-            <p>Backend Fejlesztő</p>
-            <p>Adatmérnök</p>
+            <h1 data-translate="title">Molnár Norbert</h1>
+            <p data-translate="role1">Backend Fejlesztő</p>
+            <p data-translate="role2">Adatmérnök</p>
 
             <div class="contact-info">
                 <h2>Kapcsolat</h2>
                 <p>Email: <a href="mailto:m7kn1872@gmail.com">m7kn1872@gmail.com</a></p>
                 <p>Telefon: <a href="tel:+36 30 123 4567">+36 30 123 4567</a></p>
-                <p>Github page / CV: <a href="https://m7kn.github.io" target="_blank">https://m7kn.github.io</a></p>
+                <p>CV: <a href="https://m7kn.github.io" target="_blank">https://m7kn.github.io</a></p>
             </div>
             
             <div class="skills">
@@ -91,5 +92,6 @@
             </div>
         </div>
     </div>
+    <script src="lang.js"></script>
 </body>
 </html>
