--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="container">
         <div class="left-column">
             <div class="photo"></div>
-            <h1 data-translate="title">Molnár Norbert</h1>
-            <p data-translate="role1">Backend Fejlesztő</p>
-            <p data-translate="role2">Adatmérnök</p>
+            <h1>Molnár Norbert</h1>
+            <p></p>Backend Fejlesztő</p>
+            <p>Adatmérnök</p>
 
             <div class="contact-info">
                 <h2>Kapcsolat</h2>
@@ -92,6 +92,5 @@
             </div>
         </div>
     </div>
-    <script src="lang.js"></script>
 </body>
 </html>
