--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <div class="left-column">
             <div class="photo"></div>
             <h1>Molnár Norbert</h1>
-            <p></p>Backend Fejlesztő</p>
+            <p>Backend Fejlesztő</p>
             <p>Adatmérnök</p>
 
             <div class="contact-info">
                 <h2>Kapcsolat</h2>
                 <p>Email: <a href="mailto:m7kn1872@gmail.com">m7kn1872@gmail.com</a></p>
-                <p>Telefon: <a href="tel:+36 30 123 4567">+36 30 123 4567</a></p>
+                <p>Telefon: <a href="tel:+36 70 164 9370">+36 70 164 9370</a></p>
                 <p>CV: <a href="https://m7kn.github.io" target="_blank">https://m7kn.github.io</a></p>
             </div>
             
@@ -41,7 +41,7 @@
         
         <div class="right-column">
             <div class="section">
-                <h2>Szakmai Profil</h2>
+                <h2>Szakmai profil</h2>
                 <p>Sokoldalú IT szakember vagyok, elsődlegesen backend fejlesztői fókusszal, 
                     de széleskörű tapasztalattal rendelkezem fullstack fejlesztésben és
                      rendszergazdai feladatokban is. Szakterületem a Python és NodeJS technológiák, 
@@ -58,36 +58,48 @@
             </div>
 
             <div class="section">
-                <h2>Szakmai Tapasztalat</h2>
+                <h2>Szakmai tapasztalat</h2>
                 <div class="experience-item">
-                    <h3>Senior Backend Fejlesztő - TechCo Kft.</h3>
-                    <p class="date">2020 - Jelenlegi</p>
+                    <h3>Senior Backend Fejlesztő - Gyöngy Holding Zrt.</h3>
+                    <p class="date">2023</p>
                     <ul>
-                        <li>Nagymértékben skálázható mikroszolgáltatások fejlesztése Python és NodeJS használatával</li>
-                        <li>Adatbázis optimalizálás és teljesítmény hangolás</li>
+                        <li>Nagymértékben skálázható mikroszolgáltatások fejlesztése NodeJS használatával</li>
+                        <li>API fejlesztés</li>
                         <li>CI/CD folyamatok kialakítása és karbantartása</li>
                     </ul>
                 </div>
                 <div class="experience-item">
-                    <h3>Fullstack Fejlesztő - InnoSoft Zrt.</h3>
-                    <p class="date">2018 - 2020</p>
+                    <h3>Senior Backend Fejlesztő - Neticle Zrt.</h3>
+                    <p class="date">2021 - 2023</p>
                     <ul>
-                        <li>Webalkalmazások fejlesztése MERN stack használatával</li>
+                        <li>Webalkalmazások fejlesztése NodeJS és Python használatával</li>
                         <li>RESTful API-k tervezése és implementálása</li>
                         <li>Agilis fejlesztési módszertanok alkalmazása</li>
                     </ul>
                 </div>
+                <div class="experience-item"></div>
+                    <h3>Senior Backend Fejlesztő - Freelancer</h3>
+                    <p class="date">2017 - 2021</p>
+                    <ul>
+                        <li>Webalkalmazások fejlesztése NodeJS és Python használatával</li>
+                        <li>RESTful API-k tervezése és implementálása</li>
+                    </ul>
+                </div>                
             </div>
 
             <div class="section">
-                <h2>Oktatás és Képesítések</h2>
+                <h2>Oktatás és képesítések</h2>
                 <div class="education-item">
-                    <h3>Data Engineer Képesítés - DataCamp</h3>
-                    <p class="date">2023</p>
+                    <h3><a href="https://www.datacamp.com/certificate/DE0016083271610" target="_blank">Data Engineer Certification - DataCamp</a></h3>
+                    <p class="date">2024</p>
                 </div>
                 <div class="education-item">
-                    <h3>BSc Számítástechnika - Példa Egyetem</h3>
-                    <p class="date">2014 - 2018</p>
+                    <h3>Programozó - 2F School</h3>
+                    <p class="date">2010</p>
+                </div>
+                <div class="education-item">
+                    <h3>Linux rendszergazda</h3>
+                    <p class="date">2000</p>
                 </div>
             </div>
         </div>
