fix html appearance

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Molnár Norbert CV</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <title>Molnár Norbert - Önéletrajz</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -14,14 +13,12 @@
             <h1>Molnár Norbert</h1>
             <p>Backend Fejlesztő</p>
             <p>Adatmérnök</p>
-
             <div class="contact-info">
                 <h2>Kapcsolat</h2>
                 <p>Email: <a href="mailto:m7kn1872@gmail.com">m7kn1872@gmail.com</a></p>
-                <p>Telefon: <a href="tel:+36 70 164 9370">+36 70 164 9370</a></p>
+                <p>Telefon: <a href="tel:+36701649370">+36 70 164 9370</a></p>
                 <p>CV: <a href="https://m7kn.github.io" target="_blank">https://m7kn.github.io</a></p>
             </div>
-            
             <div class="skills">
                 <h2>Készségek</h2>
                 <span class="skill">Python</span>
@@ -38,25 +35,11 @@
                 <span class="skill">AI Technologies</span>
             </div>
         </div>
-        
         <div class="right-column">
             <div class="section">
                 <h2>Szakmai profil</h2>
-                <p>Sokoldalú IT szakember vagyok, elsődlegesen backend fejlesztői fókusszal, 
-                    de széleskörű tapasztalattal rendelkezem fullstack fejlesztésben és
-                     rendszergazdai feladatokban is. Szakterületem a Python és NodeJS technológiák, 
-                     amelyeket sikeresen alkalmazok robusztus és skálázható backend rendszerek tervezésében és implementálásában. 
-                     Nemrég megszerzett Data Engineer képesítésem kiegészíti meglévő készségeimet, 
-                     lehetővé téve komplex adatkezelési feladatok megoldását. 
-                     Emellett tapasztalatom van cloud-alapú megoldások terén, 
-                     ami lehetővé teszi számomra, hogy modern, felhő alapú alkalmazásokat fejlesszek 
-                     és üzemeltessek. Rendszergazdai hátterem biztosítja, hogy a fejlesztett 
-                     rendszerek ne csak hatékonyak, de könnyen karbantarthatók és biztonságosak is legyenek.
-                     Ismerem és mindennapi munkáimban hatékonyan alkalmazom a legújabb AI technológiákat, 
-                     integrálva azokat a fejlesztési folyamatokba a hatékonyság és innováció növelése érdekében.
-                    </p>
+                <p>Sokoldalú IT szakember vagyok, elsődlegesen backend fejlesztői fókusszal, de széleskörű tapasztalattal rendelkezem fullstack fejlesztésben és rendszergazdai feladatokban is. Szakterületem a Python és NodeJS technológiák, amelyeket sikeresen alkalmazok robusztus és skálázható backend rendszerek tervezésében és implementálásában. Nemrég megszerzett Data Engineer képesítésem kiegészíti meglévő készségeimet, lehetővé téve komplex adatkezelési feladatok megoldását. Emellett tapasztalatom van cloud-alapú megoldások terén, ami lehetővé teszi számomra, hogy modern, felhő alapú alkalmazásokat fejlesszek és üzemeltessek. Rendszergazdai hátterem biztosítja, hogy a fejlesztett rendszerek ne csak hatékonyak, de könnyen karbantarthatók és biztonságosak is legyenek. Ismerem és mindennapi munkáimban hatékonyan alkalmazom a legújabb AI technológiákat, integrálva azokat a fejlesztési folyamatokba a hatékonyság és innováció növelése érdekében.</p>
             </div>
-
             <div class="section">
                 <h2>Szakmai tapasztalat</h2>
                 <div class="experience-item">
@@ -77,16 +60,15 @@
                         <li>Agilis fejlesztési módszertanok alkalmazása</li>
                     </ul>
                 </div>
-                <div class="experience-item"></div>
+                <div class="experience-item">
                     <h3>Senior Backend Fejlesztő - Freelancer</h3>
                     <p class="date">2017 - 2021</p>
                     <ul>
                         <li>Webalkalmazások fejlesztése NodeJS és Python használatával</li>
                         <li>RESTful API-k tervezése és implementálása</li>
                     </ul>
-                </div>                
+                </div>
             </div>
-
             <div class="section">
                 <h2>Oktatás és képesítések</h2>
                 <div class="education-item">
