--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <span class="skill">Docker</span>
                 <span class="skill">Microservices</span>
                 <span class="skill">Cloud Computing</span>
-                <span class="skill">Full Stack Development</span>
+                <span class="skill">Full Stack</span>
                 <span class="skill">System Administration</span>
                 <span class="skill">AI Technologies</span>
             </div>
@@ -39,10 +39,10 @@
         <div class="right-column">
             <div class="section">
                 <h2>Szakmai profil</h2>
-                <p>Sokoldalú IT szakember vagyok, elsődlegesen backend fejlesztői fókusszal, de széleskörű tapasztalattal rendelkezem fullstack fejlesztésben és rendszergazdai feladatokban is. Szakterületem a Python és NodeJS technológiák, amelyeket sikeresen alkalmazok robusztus és skálázható backend rendszerek tervezésében és implementálásában. Nemrég megszerzett Data Engineer képesítésem kiegészíti meglévő készségeimet, lehetővé téve komplex adatkezelési feladatok megoldását. Emellett tapasztalatom van cloud-alapú megoldások terén, ami lehetővé teszi számomra, hogy modern, felhő alapú alkalmazásokat fejlesszek és üzemeltessek. Rendszergazdai hátterem biztosítja, hogy a fejlesztett rendszerek ne csak hatékonyak, de könnyen karbantarthatók és biztonságosak is legyenek. Ismerem és mindennapi munkáimban hatékonyan alkalmazom a legújabb AI technológiákat, integrálva azokat a fejlesztési folyamatokba a hatékonyság és innováció növelése érdekében.</p>
+                <p class="profile">Elsősorban backend fejlesztői tapasztalattal rendelkezem, de otthonosan mozgok a fullstack fejlesztésben és a rendszergazdai feladatokban is. Fő szakterületem a Python és NodeJS, melyekkel stabil és skálázható backend rendszereket tervezek és építek. Frissen szerzett Data Engineer képesítésemmel most már összetett adatkezelési feladatokat is megoldok. Jártas vagyok a felhő alapú technológiákban, így modern, cloud-alapú alkalmazásokat fejlesztek és üzemeltetek. Rendszergazdai tapasztalatom segít abban, hogy a rendszereim ne csak hatékonyak, de könnyen kezelhetők és biztonságosak is legyenek. A munkám során aktívan használom a legújabb AI technológiákat, ezzel növelve a hatékonyságot és az innovációt a fejlesztési folyamatokban.</p>
             </div>
             <div class="section">
-                <h2>Szakmai tapasztalat</h2>
+                <h2>Szakmai tapasztalat (7 évre visszamenőleg)</h2>
                 <div class="experience-item">
                     <h3>Senior Backend Fejlesztő - Gyöngy Holding Zrt.</h3>
                     <p class="date">2023</p>
