change styles, add profile image, add icons

--- a/index.html
+++ b/index.html
@@ -5,47 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Molnár Norbert - Önéletrajz</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <div class="left-column">
-            <div class="photo"></div>
+            <div class="photo"><img src="me.webp"></div>
             <h1>Molnár Norbert</h1>
-            <p>Backend Fejlesztő</p>
-            <p>Adatmérnök</p>
+            <p><i class="fas fa-code"></i> Backend Fejlesztő</p>
+            <p><i class="fas fa-database"></i> Adatmérnök</p>
             <div class="contact-info">
-                <h2>Kapcsolat</h2>
-                <p>Email: <a href="mailto:m7kn1872@gmail.com">m7kn1872@gmail.com</a></p>
-                <p>Telefon: <a href="tel:+36701649370">+36 70 164 9370</a></p>
-                <p>CV: <a href="https://m7kn.github.io" target="_blank">https://m7kn.github.io</a></p>
+                <h2><i class="fas fa-address-card"></i> Kapcsolat</h2>
+                <p><i class="fas fa-envelope"></i> Email: <a href="mailto:m7kn1872@gmail.com">m7kn1872@gmail.com</a></p>
+                <p><i class="fas fa-phone"></i> Telefon: <a href="tel:+36701649370">+36 70 164 9370</a></p>
+                <p><i class="fas fa-globe"></i> CV: <a href="https://m7kn.github.io" target="_blank">https://m7kn.github.io</a></p>
             </div>
             <div class="skills">
-                <h2>Készségek</h2>
-                <span class="skill">Python</span>
-                <span class="skill">NodeJS</span>
-                <span class="skill">SQL</span>
-                <span class="skill">RESTful API</span>
-                <span class="skill">Git</span>
-                <span class="skill">Data Engineering</span>
-                <span class="skill">Docker</span>
-                <span class="skill">Microservices</span>
-                <span class="skill">Cloud Computing</span>
-                <span class="skill">Full Stack</span>
-                <span class="skill">System Administration</span>
-                <span class="skill">AI Technologies</span>
+                <h2><i class="fas fa-cogs"></i> Készségek</h2>
+                <span class="skill"><i class="fab fa-python"></i> Python</span>
+                <span class="skill"><i class="fab fa-node-js"></i> NodeJS</span>
+                <span class="skill"><i class="fas fa-database"></i> SQL</span>
+                <span class="skill"><i class="fas fa-server"></i> RESTful API</span>
+                <span class="skill"><i class="fab fa-git-alt"></i> Git</span>
+                <span class="skill"><i class="fab fa-python"></i> Pandas</span>
+                <span class="skill"><i class="fas fa-chart-line"></i> Data Engineering</span>
+                <span class="skill"><i class="fab fa-docker"></i> Docker</span>
+                <span class="skill"><i class="fas fa-cubes"></i> Microservices</span>
+                <span class="skill"><i class="fa-brands fa-react"></i> React</span>
+                <span class="skill"><i class="fas fa-cloud"></i> Cloud Computing</span>
+                <span class="skill"><i class="fas fa-laptop-code"></i> Full Stack</span>
+                <span class="skill"><i class="fab fa-python"></i> Django</span>
+                <span class="skill"><i class="fas fa-network-wired"></i> System Administration</span>
+                <span class="skill"><i class="fab fa-linux"></i> Linux</span>
+                <span class="skill"><i class="fas fa-robot"></i> AI Technologies</span>
             </div>
         </div>
         <div class="right-column">
             <div class="section">
-                <h2>Szakmai profil</h2>
+                <h2><i class="fas fa-user-tie"></i> Szakmai profil</h2>
                 <p class="profile">Elsősorban backend fejlesztői tapasztalattal rendelkezem, de otthonosan mozgok a fullstack fejlesztésben és a rendszergazdai feladatokban is. Fő szakterületem a Python és NodeJS, melyekkel stabil és skálázható backend rendszereket tervezek és építek. Frissen szerzett Data Engineer képesítésemmel most már összetett adatkezelési feladatokat is megoldok. Jártas vagyok a felhő alapú technológiákban, így modern, cloud-alapú alkalmazásokat fejlesztek és üzemeltetek. Rendszergazdai tapasztalatom segít abban, hogy a rendszereim ne csak hatékonyak, de könnyen kezelhetők és biztonságosak is legyenek. A munkám során aktívan használom a legújabb AI technológiákat, ezzel növelve a hatékonyságot és az innovációt a fejlesztési folyamatokban.</p>
             </div>
             <div class="section">
-                <h2>Szakmai tapasztalat (7 évre visszamenőleg)</h2>
+                <h2><i class="fas fa-briefcase"></i> Szakmai tapasztalat (7 évre visszamenőleg)</h2>
                 <div class="experience-item">
-                    <h3>Senior Backend Fejlesztő - Gyöngy Holding Zrt.</h3>
-                    <p class="date">2023</p>
+                    <h3>Senior Backend Fejlesztő - Gyöngy Holding Zrt.</h3>                   
                     <ul>
                         <li>Nagymértékben skálázható mikroszolgáltatások fejlesztése NodeJS használatával</li>
                         <li>API fejlesztés</li>
@@ -54,7 +58,6 @@
                 </div>
                 <div class="experience-item">
                     <h3>Senior Backend Fejlesztő - Neticle Zrt.</h3>
-                    <p class="date">2021 - 2023</p>
                     <ul>
                         <li>Webalkalmazások fejlesztése NodeJS és Python használatával</li>
                         <li>RESTful API-k tervezése és implementálása</li>
@@ -62,8 +65,7 @@
                     </ul>
                 </div>
                 <div class="experience-item">
-                    <h3>Senior Backend Fejlesztő - Freelancer</h3>
-                    <p class="date">2017 - 2021</p>
+                    <h3>Senior Backend, Frontend Fejlesztő - Freelancer</h3>
                     <ul>
                         <li>Webalkalmazások fejlesztése NodeJS és Python használatával</li>
                         <li>RESTful API-k tervezése és implementálása</li>
@@ -71,18 +73,15 @@
                 </div>
             </div>
             <div class="section">
-                <h2>Oktatás és képesítések</h2>
+                <h2><i class="fas fa-graduation-cap"></i> Oktatás és képesítések</h2>
                 <div class="education-item">
-                    <h3><a href="https://www.datacamp.com/certificate/DE0016083271610" target="_blank">Data Engineer Certification - DataCamp</a></h3>
-                    <p class="date">2024</p>
+                    <h3>2024: <i class="fas fa-certificate"></i> <a href="https://www.datacamp.com/certificate/DE0016083271610" target="_blank">Data Engineer Certification - DataCamp</a></h3>
                 </div>
                 <div class="education-item">
-                    <h3>Programozó - 2F School</h3>
-                    <p class="date">2010</p>
+                    <h3>2010: <i class="fas fa-code"></i> Programozó - 2F School</h3>
                 </div>
                 <div class="education-item">
-                    <h3>Linux rendszergazda</h3>
-                    <p class="date">2000</p>
+                    <h3>2000: <i class="fab fa-linux"></i> Linux rendszergazda</h3>
                 </div>
             </div>
         </div>
