change portrait image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="left-column">
-            <div class="photo"><img src="me.webp"></div>
+            <div class="photo"><img src="en2_small.jpg"></div>
             <h1>Molnár Norbert</h1>
             <p><i class="fas fa-code"></i> Backend Fejlesztő</p>
             <p><i class="fas fa-database"></i> Adatmérnök</p>
