--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <div class="container">
         <div class="left-column">
-            <div class="photo"><img src="en2_small.jpg"></div>
+            <div class="photo"><img src="enkepem_small.png"></div>
             <h1>Molnár Norbert</h1>
             <p><i class="fas fa-code"></i> Backend Fejlesztő</p>
             <p><i class="fas fa-database"></i> Adatmérnök</p>
             <div class="contact-info">
                 <h2><i class="fas fa-address-card"></i> Kapcsolat</h2>
                 <p><i class="fas fa-envelope"></i> Email: <a href="mailto:m7kn1872@gmail.com">m7kn1872@gmail.com</a></p>
-                <p><i class="fas fa-phone"></i> Telefon: <a href="tel:+36701649370">+36 70 164 9370</a></p>
+                <p><i class="fas fa-phone"></i> Telefon: <a href="tel:+36701649370">+36 30 403 5609</a></p>
                 <p><i class="fas fa-globe"></i> CV: <a href="https://m7kn.github.io" target="_blank">https://m7kn.github.io</a></p>
             </div>
             <div class="skills">
@@ -44,14 +44,13 @@
         <div class="right-column">
             <div class="section">
                 <h2><i class="fas fa-user-tie"></i> Szakmai profil</h2>
-                <p class="profile">Elsősorban backend fejlesztői tapasztalattal rendelkezem, de otthonosan mozgok a fullstack fejlesztésben és a rendszergazdai feladatokban is. Fő szakterületem a Python és NodeJS, melyekkel stabil és skálázható backend rendszereket tervezek és építek. Frissen szerzett Data Engineer képesítésemmel most már összetett adatkezelési feladatokat is megoldok. Jártas vagyok a felhő alapú technológiákban, így modern, cloud-alapú alkalmazásokat fejlesztek és üzemeltetek. Rendszergazdai tapasztalatom segít abban, hogy a rendszereim ne csak hatékonyak, de könnyen kezelhetők és biztonságosak is legyenek. A munkám során aktívan használom a legújabb AI technológiákat, ezzel növelve a hatékonyságot és az innovációt a fejlesztési folyamatokban.</p>
+                <p class="profile">Elsősorban backend fejlesztői tapasztalattal rendelkezem, de otthonosan mozgok a fullstack fejlesztésben és a rendszergazdai feladatokban is. Fő szakterületem a Python és NodeJS, melyekkel stabil és skálázható backend rendszereket, REST API-kat tervezek és építek. Data Engineer képesítésemmel összetett adatkezelési feladatokat is megoldok. Modern, cloud-alapú alkalmazásokat, serverless, jamstack alkalmazásokat is fejlesztek és üzemeltetek. Rendszergazdai tapasztalatom segít abban, hogy a rendszereim ne csak hatékonyak, de könnyen kezelhetők és biztonságosak is legyenek. A munkám során aktívan használom a legújabb AI technológiákat, ezzel növelve a hatékonyságot és az innovációt a fejlesztési folyamatokban.</p>
             </div>
             <div class="section">
                 <h2><i class="fas fa-briefcase"></i> Szakmai tapasztalat (7 évre visszamenőleg)</h2>
                 <div class="experience-item">
                     <h3>Senior Backend Fejlesztő - Gyöngy Holding Zrt.</h3>                   
                     <ul>
-                        <li>Nagymértékben skálázható mikroszolgáltatások fejlesztése NodeJS használatával</li>
                         <li>API fejlesztés</li>
                         <li>CI/CD folyamatok kialakítása és karbantartása</li>
                     </ul>
